--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ html {
 
 .container {
   width: 600px;
-  height: 600px;
+  height: 800px;
   background-color: #f2eecb;
   border-radius: 4px;
   padding: 32px;
@@ -66,7 +66,46 @@ html {
   font-size: 1.8rem;
   font-family: "Langar", sans-serif;
 
-  padding: 24px;
+  padding: 16px;
+
+  background: unset;
+  border: unset;
+  outline: unset;
+
+  cursor: pointer;
+}
+
+.add {
+  padding: 16px;
+}
+
+.add-form {
+  display: flex;
+  align-items: flex-start;
+}
+
+.add-input {
+  background: unset;
+  border: unset;
+  padding: 0 64px;
+
+  flex: 1;
+
+  border-bottom: 1px solid var(--main-red-color);
+  outline: unset;
+
+  font-family: "Roboto";
+  font-size: 16px;
+  text-transform: lowercase;
+}
+
+.add-btn {
+  font-size: 1.8rem;
+  font-family: "Langar";
+
+  padding: 16px;
+  padding-right: unset;
+  cursor: pointer;
 
   background: unset;
   border: unset;
