--- a/style.css
+++ b/style.css
@@ -4,10 +4,15 @@
 
 :root {
   --main-red-color: #e06262;
+  --main-black-color: #484848;
 }
 
 .main-red-color {
   color: var(--main-red-color);
+}
+
+.main-black-color {
+  color: var(--main-black-color);
 }
 
 html {
@@ -42,11 +47,12 @@ html {
 }
 
 .frame {
-  border: 1px solid #484848;
+  border: 1px solid var(--main-black-color);
   height: 100%;
 
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
@@ -60,6 +66,7 @@ html {
   font-size: 3.6rem;
   font-family: "Roboto", sans-serif;
   text-transform: lowercase;
+  color: var(--main-black-color);
 }
 
 .header-btn {
@@ -75,13 +82,21 @@ html {
   cursor: pointer;
 }
 
+.header-btn.main-black-color:active {
+  text-shadow: 1px 1px 2px var(--main-black-color);
+}
+
+.header-btn.main-red-color:active {
+  text-shadow: 1px 1px 2px var(--main-red-color);
+}
+
 .add {
   padding: 16px;
 }
 
 .add-form {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .add-input {
@@ -110,4 +125,33 @@ html {
   background: unset;
   border: unset;
   outline: unset;
+}
+
+.add-btn.main-black-color:active {
+  text-shadow: 1px 1px 2px var(--main-black-color);
+}
+
+.todos {
+  display: felx;
+  flex-direction: column;
+}
+
+.todo {
+  position: relative;
+
+  flex: 1 0 auto;
+  text-align: center;
+
+  min-height: 34px;
+  margin: 16px 0 0;
+  font-family: "Roboto";
+  font-size: 24px;
+
+  border-bottom: 1px solid var(--main-red-color);
+}
+
+.todo-text {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
 }
